[tool.poetry]
name = "poc-flask-error-handler"
version = "0.1.0"
description = ""
authors = ["Pedro Dalvy <pedrodalvy@outlook.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]


[tool.poetry.scripts]
start = "app.app:app.run"
debug = "app.app:app.run(debug=True)"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
